# neuralel

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
isodd/: CMakeLists.txt
isodd/src/: main.cpp
neuralnet/: CMakeLists.txt
neuralnet/include/: activation.hpp  layer.hpp  network.hpp
neuralnet/src/: activation.cpp  layer.cpp  network.cpp
sine/: CMakeLists.txt
sine/src/: main.cpp
